# phoenix-chat

./: README.md
api/: .gitignore  Cargo.toml  app.db
api/src/: file.rs  main.rs  messages.rs  private.rs  structs.rs  token.rs
client/: package-lock.json  package.json
client/components/: chat.module.scss  chat.tsx  friends.tsx  rooms.tsx  useChannelOnEvent.ts  useCnannel.ts  useLogin.ts  useNotification.ts  useSocket.ts
client/lib/: auth.ts  fetch.ts  msg.ts  private.ts  token.ts  url.ts
client/pages/: index.tsx  login.tsx
client/styles/: globals.css
realtime/: mix.exs
realtime/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
realtime/lib/: realtime_web.ex
realtime/lib/realtime/: application.ex
realtime/lib/realtime_web/: endpoint.ex  router.ex  telemetry.ex
realtime/lib/realtime_web/channels/: friend_channel.ex  notification_channel.ex  private_channel.ex  room_channel.ex  token.ex  user_socket.ex
realtime/lib/realtime_web/components/: core_components.ex
realtime/lib/realtime_web/components/layouts/: root.html.heex
